<resources>

    // APP name
    <string name="app_name">Home Automation Platform</string>
    <string name="app_nickname">HAP</string>

    // Labels
    <string name="room_label">Cômodo</string>
    <string name="devices_label">Dispositivos</string>
    <string name="name_label">Nome:</string>
    <string name="type_label">Tipo:</string>
    <string name="topic_label">Tópico:</string>
    <string name="id_label">ID:</string>
    <string name="ldr_reading_label">Leitura</string>
    <string name="threshold_label">Limiar</string>

    // Buttons
    <string name="confirm_button">Confirmar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="yes_button">Sim</string>
    <string name="no_button">Não</string>

    // Hints
    <string name="logo_hint">HAP icon</string>
    <string name="location_name_hint">Nome do local</string>
    <string name="device_name_hint">Nome do dispositivo</string>
    <string name="device_designator_hint">Designador do dispositivo</string>
    <string name="device_id_hint">ID do dispositivo</string>
    <string name="room_topic_hint">Tópico do cômodo</string>
    <string name="device_topic_hint">Tópico do dispositivo</string>

    // Descriptions
    <string name="location_add_description">Adicionar um novo local</string>
    <string name="device_add_description">Adicionar um novo dispositivo</string>
    <string name="room_open_description">Mostrar informações do cômodo</string>
    <string name="configuration_button_description">Abrir janela de configurações</string>
    <string name="lamp_control_description">Ligar/Desligar lâmpada</string>
    <string name="socket_control_description">Ligar/Desligar tomada</string>
    <string name="door_control_description">Abrir/Fechar porta</string>
    <string name="air_control_description">Ligar/Desligar ar condicionado</string>
    <string name="camera_control_description">Ver streaming</string>
    <string name="temperature_up_button_description">Aumentar a temperatura</string>
    <string name="temperature_down_button_description">Diminuir a temperatura</string>
    <string name="device_config_description">Configurar dispositivo</string>
    <string name="device_delete_description">Apagar dispositivo</string>

    //  Messages
    <string name="connecting_message">Conectando ao servidor</string>
    <string name="loading_message">Carregando dados</string>
    <string name="connection_failed_message">Falha na conexão.\nDeseja tentar novamente?</string>
    <string name="database_failed_message">Falha na atualização dos dados.\nDeseja tentar novamente?</string>
    <string name="confirm_device_delete_message">Deseja realmente apagar esse dispositivo?</string>
    <string name="confirm_room_delete_message">Deseja realmente apagar esse cômodo?</string>

    // Units
    <string name="temperature_unit">°C</string>

</resources>