<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:background="@color/lightGrey">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/logo_hint"
        android:src="@drawable/hap_logo"
        app:srcCompat="@drawable/ic_logo"
        app:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_nickname"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/logoImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/configurationImageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/button_info_states"
        android:cropToPadding="false"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/configuration_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_configuration" />

</androidx.constraintlayout.widget.ConstraintLayout>