<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/mediumYellow"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/deviceCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/mediumGrey"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/airLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/mediumGrey"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/airNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <ToggleButton
                    android:id="@+id/airControlToggleButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/button_air_states"
                    android:textOn=""
                    android:textOff=""
                    android:contentDescription="@string/air_control_description"
                    app:layout_constraintBottom_toBottomOf="@id/airNameTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/airNameTextView" />

                <ImageButton
                    android:id="@+id/upImageButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_arrow_states"
                    android:contentDescription="@string/temperature_up_button_description"
                    app:layout_constraintBottom_toTopOf="@id/downImageButton"
                    app:layout_constraintEnd_toStartOf="@id/airControlToggleButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/downImageButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_arrow_states"
                    android:rotation="180"
                    android:contentDescription="@string/temperature_down_button_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/airControlToggleButton"
                    app:layout_constraintTop_toBottomOf="@id/upImageButton" />

                <TextView
                    android:id="@+id/temperatureTextView"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@color/darkGrey"
                    app:layout_constraintEnd_toStartOf="@id/upImageButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>