<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/mediumYellow"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/deviceCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/mediumGrey"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cameraLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/mediumGrey"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/cameraNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ToggleButton
                    android:id="@+id/cameraControlToggleButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/button_camera_states"
                    android:textOn=""
                    android:textOff=""
                    android:visibility="visible"
                    android:contentDescription="@string/camera_control_description"
                    app:layout_constraintBottom_toBottomOf="@id/cameraNameTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/cameraNameTextView" />

                <ImageButton
                    android:id="@+id/cameraConfigImageButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/button_gear_states"
                    android:scaleType="centerCrop"
                    android:visibility="invisible"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/device_config_description"
                    app:layout_constraintBottom_toBottomOf="@id/cameraControlToggleButton"
                    app:layout_constraintEnd_toStartOf="@id/cameraDeleteImageButton"
                    app:layout_constraintTop_toTopOf="@id/cameraControlToggleButton" />

                <ImageButton
                    android:id="@+id/cameraDeleteImageButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/button_delete_states"
                    android:scaleType="centerCrop"
                    android:visibility="invisible"
                    android:contentDescription="@string/device_delete_description"
                    app:layout_constraintBottom_toBottomOf="@id/cameraControlToggleButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/cameraControlToggleButton" />

                <FrameLayout
                    android:id="@+id/videoLayout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="15dp"
                    android:visibility="gone"
                    app:layout_constraintDimensionRatio="640:480"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cameraNameTextView" >

                    <org.videolan.libvlc.util.VLCVideoLayout
                        android:id="@+id/cameraVideoLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>